header done no drop down

--- a/index.html
+++ b/index.html
@@ -3,9 +3,37 @@
   <head>
     <meta charset="utf-8">
     <title>Sims Global Solutions</title>
-    <link rel="stylesheet" type="text/css" href="/resources/css/style.css">
+    <link rel="stylesheet" type="text/css" href="resources/css/reset.css">
+    <link rel="stylesheet" type="text/css" href="resources/css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Oswald:700,400,300|Rubik:300,400,500" rel="stylesheet">
   </head>
   <body>
-
+    <!-- Header section ------------------------------------------------>
+    <header>
+      <div class="header">
+        <div class="upperhead">
+          <div class="headlogo">
+            <img src="https://app.salesdrip.com/users/myteam45785/Media3.png" alt="">
+          </div>
+          <div class="headship">
+            <span class="blue bold w500">Ship now! </span> <p>1</p>
+            <span class="w300"><a href="tel:+1855-326-8671">855-326-8671</a></span>
+          </div>
+        </div>
+        </div>
+        <div class="lowerhead">
+          <nav class="main-nav">
+            <ul>
+              <li id="navitem"><a href="#">SERVICES</a></li>
+              <li id="navitem"><a href="#">DOCUMENTS</a></li>
+              <li id="navitem"><a href="#">ABOUT</a></li>
+              <li id="navitem"><a href="#">FAQS</a></li>
+              <li id="navitem"><a href="#">BLOG</a></li>
+              <li id="navitem"><a href="#">CONTACT</a></li>
+              <li><a id="loginnav" href="#">LOG IN</a></li>
+            </ul>
+          </nav>
+        </div>
+    </header>
   </body>
 </html>
