Head Foot Complete

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                 <li id="servitem"><a href="#">Specialized</a></li>
                 <li id="servitem"><a href="#">International</a></li>
               </ul></li>
+              <li id="navitem"><a href="#">SPECIALTIES</a></li>
               <li id="navitem"><a href="#">DOCUMENTS</a></li>
               <li id="navitem"><a href="#">ABOUT</a></li>
               <li id="navitem"><a href="#">FAQS</a></li>
@@ -188,12 +189,16 @@
            <a href="https://www.facebook.com/shipsims/" target="_blank"><img src="https://app.salesdrip.com/users/myteam45785/Media178.jpg" alt=""></a>
            <a href="https://twitter.com/Sims_Global" target="_blank"><img src="https://app.salesdrip.com/users/myteam45785/Media179.jpg" alt=""></a>
            <a href="https://www.instagram.com/simsglobalsolutions/" target="_blank"><img src="https://app.salesdrip.com/users/myteam45785/Media176.jpg" alt=""></a>
-
          </div>
+       </div>
+       <div class="contactbar">
+         <p> Sims Global Solutions. 6101 Long Prairie Rd., Ste. 744-252, Flower Mound, TX 75028
+     <span class="doublepad">Email: <span class="blue"><a class="blue" href="<a href="mailto:customerservice@simsglobalsolutions.com">customerservice@simsglobalsolutions.com</a></span></span>
+<span class="pad">Phone: <a class="blue" href="tel:+1855-326-8671">855-326-8671</a></span> <span class="pad">Fax: <span>214-594-9164</span></span></p>
        </div>
       </div>
       <div class="bottomfoot">
-
+        © 2019 Sims Global Solutions. All rights reserved. 
       </div>
 
     </div>
